--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ script:
 - |
   set -e
   if [ "${TRAVIS_PULL_REQUEST}" = "false" ] && [ "${TRAVIS_BRANCH}" = "master" ]; then
-   ./gradlew publish --info closeAndReleaseRepository
+   ./gradlew publish --info
+   ./gradlew getStagingProfile closeAndReleaseRepository --info
   fi
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
